--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 </p>
                 <a href="#contact" class="cta-button animate animate-delay-3" data-lang-key="hero-cta">詳細を見る</a>
             </div>
+            <div class="video-container">
+    <video autoplay muted loop playsinline class="hero-video">
+        <source src="video/TeraboxHero.mp4" type="video/mp4">
+        <!-- Fallback for browsers that don't support video -->
+        <div class="video-fallback">
             <div class="cube-container">
                 <div class="cube">
                     <div class="cube-face"></div>
@@ -59,6 +64,9 @@
                     <div class="cube-face"></div>
                 </div>
             </div>
+        </div>
+    </video>
+</div>
         </div>
     </section>
 
