--- a/index.html
+++ b/index.html
@@ -77,26 +77,26 @@
             <p class="section-subtitle scroll-animate" data-lang-key="news-subtitle">最新のニュースと情報をお届けします</p>
             <div class="news-grid">
                 <div class="news-card scroll-animate">
-                    <div class="news-image"><i class="fas fa-trophy"></i></div>
-                    <div class="news-content">
-                        <div class="news-title" data-lang-key="news-hackathon-title">Terabox区块链黑客松大赛</div>
-                        <p class="news-text" data-lang-key="news-hackathon-text">Terabox主办的首届区块链黑客松大赛成功举办，来自全国各地的开发者团队展示了创新的Web3解决方案。大赛聚焦DeFi、NFT、DAO等前沿技术应用，推动区块链技术在各行业的实际落地。</p>
-                    </div>
-                </div>
-                <div class="news-card scroll-animate">
+    <div class="news-image"><i class="fas fa-trophy"></i></div>
+    <div class="news-content">
+        <div class="news-title" data-lang-key="news-hackathon-title">Terabox主催ブロックチェーンハッカソン大会が成功開催</div>
+        <p class="news-text" data-lang-key="news-hackathon-text">Terabox主催による第1回ブロックチェーンハッカソン大会が盛況のうちに開催されました。全国各地から参加した開発者チームが、革新的なWeb3ソリューションを発表し、DeFi、NFT、DAOなどの最先端技術応用に焦点を当てました。本大会を通じて、ブロックチェーン技術の各業界への実用化推進に大きく貢献いたします。<a href="#contact" class="news-link">詳細はこちら</a></p>
+    </div>
+</div>
+                 <div class="news-card scroll-animate">
                     <div class="news-image"><i class="fas fa-building"></i></div>
                     <div class="news-content">
-                        <div class="news-title" data-lang-key="news-item-title">Terabox</div>
-                        <p class="news-text" data-lang-key="news-item-text">想無ぜぱてり韓地ごあぐぼ件表治クたン庫供ひほド社89関よゅょ南路ミセオテ年望ツ速講21幻ちんぴげ。</p>
+                        <div class="news-title" data-lang-key="news-partnership-title">海外パートナーシップによるコスト最適化を実現</div>
+                        <p class="news-text" data-lang-key="news-partnership-text">Teraboxは、サプライヤー最適化戦略の一環として、英国のAxion Intelligence UKをはじめとする海外企業との戦略的パートナーシップを締結いたしました。同社の高品質かつコストパフォーマンスに優れた開発コンサルティングサービスにより、従来の開発コストを50%以上削減することに成功し、日本のお客様により手頃な価格でのサービス提供を実現いたします。この取り組みにより、より多くの企業様にAIソリューションやIoTシステムをご利用いただけるようになりました。<a href="#contact" class="news-link">詳細はこちら</a></p>
                     </div>
                 </div>
                 <div class="news-card scroll-animate">
-                    <div class="news-image"><i class="fas fa-chart-bar"></i></div>
-                    <div class="news-content">
-                        <div class="news-title" data-lang-key="news-item-title">Terabox</div>
-                        <p class="news-text" data-lang-key="news-item-text">想無ぜぱてり韓地ごあぐぼ件表治クたン庫供ひほド社89関よゅょ南路ミセオテ年望ツ速講21幻ちんぴげ。</p>
-                    </div>
-                </div>
+    <div class="news-image"><i class="fas fa-chart-bar"></i></div>
+    <div class="news-content">
+        <div class="news-title" data-lang-key="news-rakuten-title">楽天モバイル向け遠隔医療ソリューション提案が採択</div>
+        <p class="news-text" data-lang-key="news-rakuten-text">Teraboxは、中国市場での豊富な遠隔医療ソリューション実績を活かし、楽天モバイル様への革新的な提案が正式に採択されました。WiFi6技術とGPU処理能力を組み合わせた超低遅延・高精細度の遠隔ビデオ医療ソリューションにより、日本の医療現場に新たな可能性をもたらします。本ソリューションは、医師と患者間のリアルタイム診療体験を飛躍的に向上させ、地域医療格差の解消に貢献いたします。<a href="#contact" class="news-link">詳細はこちら</a></p>
+    </div>
+</div>
             </div>
         </div>
     </section>
