--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                     エンタープライズソリューション、エンジニアリング<br>
                     人材サービスの六つの事業で未来を創造します
                 </p>
+				 <!-- Hand SVG Decoration (bottom-right) -->
+                <div class="hand-decoration">
+                    <!-- 直接引用SVG文件 -->
+                    <img src="images/hand.svg" alt="Hand Decoration" class="hand-svg">
+                </div>
                 <a href="#contact" class="cta-button animate animate-delay-3" data-lang-key="hero-cta">詳細を見る</a>
             </div>
             <div class="video-container">
